@@ -1,23 +1,0 @@
-//
-//  AccelerometerView.swift
-//  BricksAndBalls
-//
-//  Created by Holger Hinzberg on 21.04.21.
-//
-
-import Foundation
-
-import SpriteKit
-
-class AccelerometerSKScene : SKBorderScene , ObservableObject {
-    
-    override func didMove(to view: SKView) {
-        super.didMove(to: view)
-        backgroundColor = .black
-    }
-    
-    
-    
-    
-    
-}
