@@ -1,4 +1,7 @@
 
+2021-05-16
+- Accelerometer added
+
 2021-04-26
 - Files from old project imported
 
